# codex-meter

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  release.yml  vite.config.ts
.github/workflows/: release.yml
docs/: KNOWN-LIMITATIONS.md  PROJECT-SUMMARY.md  RELEASE.md  RELEASE_TEMPLATE.md  TEST-MATRIX.md
scripts/: package-windows.ps1  tauri.with-node.json  test-cdp-launch.ps1
src/: App.tsx  inject.test.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: inject.js  injector.mjs  launch-codex-cdp.ps1  resolve-codex-install.ps1
src-tauri/src/: cdp.rs  codex.rs  lib.rs  main.rs  models.rs  window_top.rs
src/components/: DesignPlayground.tsx  ProviderMark.tsx  QuotaCard.tsx
src/lib/: bridge.ts  format.test.ts  format.ts  i18n.ts  snapshots.test.ts  snapshots.ts
